[gd_scene load_steps=2 format=3 uid="uid://dovgwxs8h0x35"]

[ext_resource type="Script" path="res://assets/configiration menu/configuration_menu.gd" id="1_1s3th"]

[node name="configuration_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1s3th")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="video" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/video"]
custom_minimum_size = Vector2(0.39, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.0
offset_right = 37.0
offset_bottom = 31.0
grow_horizontal = 2
scale = Vector2(2, 2)

[node name="full_screen" type="CheckButton" parent="TabContainer/video/VBoxContainer"]
layout_mode = 2
text = "full screen
"

[node name="audio" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/audio"]
custom_minimum_size = Vector2(0.39, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.0
offset_right = 37.0
offset_bottom = 31.0
grow_horizontal = 2
scale = Vector2(2, 2)

[node name="volume2" type="Label" parent="TabContainer/audio/VBoxContainer"]
layout_mode = 2
text = "volume"

[node name="volume" type="HSlider" parent="TabContainer/audio/VBoxContainer"]
layout_mode = 2
value = 75.0

[node name="controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/controls"]
custom_minimum_size = Vector2(0.39, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.0
offset_right = 37.0
offset_bottom = 31.0
grow_horizontal = 2
scale = Vector2(2, 2)

[node name="mouse sensitivity" type="Label" parent="TabContainer/controls/VBoxContainer"]
layout_mode = 2
text = "mouse sensitivity"

[node name="mouse_sensitivity" type="HSlider" parent="TabContainer/controls/VBoxContainer"]
layout_mode = 2
max_value = 50.0
value = 12.0

[node name="joystick sensitivity" type="Label" parent="TabContainer/controls/VBoxContainer"]
layout_mode = 2
text = "joystick sensitivity"

[node name="joystick_sensitivity" type="HSlider" parent="TabContainer/controls/VBoxContainer"]
layout_mode = 2
max_value = 50.0
value = 12.0

[connection signal="tab_changed" from="TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="tab_selected" from="TabContainer" to="." method="_on_tab_container_tab_selected"]
[connection signal="tab_selected" from="TabContainer/video" to="." method="_on_video_tab_selected"]
[connection signal="toggled" from="TabContainer/video/VBoxContainer/full_screen" to="." method="_on_full_screen_toggled"]
[connection signal="drag_ended" from="TabContainer/audio/VBoxContainer/volume" to="." method="_on_volume_drag_ended"]
